<resources>
    <string name="app_name">Jegyzetek</string>
    <string name="add_note">Jegyzet hozzáadása</string>
    <string name="note_title">Cím (Opcionális)</string>
    <string name="note_content">Tartalom</string>
    <string name="save_note">Mentés</string>
    <string name="logout">Kijelentkezés</string>
    <string name="search_hint">Keresés…</string>
    <string name="recycler_view_notes">Jegyzetek</string>
    <string name="registration">Regisztráció</string>
    <string name="email">E-mail</string>
    <string name="password">Jelszó</string>
    <string name="confirm_password">Jelszó megerősítése</string>
    <string name="missing_account">Még nincs fiókod? Regisztráció</string>
    <string name="login">Bejelentkezés</string>
    <string name="stay_logged_in">Maradjon bejelentkezve?</string>
    <string name="reminder">Emlékeztető</string>
    <string name="share">Megosztás</string>
</resources>